# arc-lend

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json
app/: next.config.js  package.json  tailwind.config.ts  vercel.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/history/: page.tsx
app/src/app/requirements/: page.tsx
app/src/app/trade/: page.tsx
app/src/components/: AppProviders.tsx  HeaderNav.tsx  PriceOracle.tsx  ThemeToggle.tsx  TradeForm.tsx
app/src/hooks/: useLiquidation.ts  usePnl.ts
app/src/lib/: arcium.ts  encryption.ts  local-state.ts
encrypted-ixs/: check_liquidation.rs
private-perps/: Arcium.toml  package.json
private-perps/app/: .env.example
private-perps/app/src/app/borrow/: page.tsx
private-perps/app/src/app/loans/: page.tsx
private-perps/app/src/app/positions/: page.tsx
private-perps/app/src/components/: MpcStatus.tsx  PnlReveal.tsx  PositionCard.tsx  WalletButton.tsx
private-perps/app/src/hooks/: usePosition.ts
private-perps/app/src/lib/: encryption.ts  prices.ts  program.ts
private-perps/app/src/types/: index.ts
private-perps/encrypted-ixs/: close_position.rs  open_position.rs
private-perps/programs/private-perps/src/: lib.rs
programs/private-perps/: Cargo.toml
tests/: private-perps.ts
